{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 142,
  "lineage": "e9605496-21ac-1b4e-d7a0-e973c2d95132",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/publicIPAddresses/publicip20230520x01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.54.91",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "publicip20230520x01",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/networkInterfaces/nic20230520x01",
            "internal_domain_name_suffix": "w3wwyy20spkutj00jf4xrfdjgd.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/publicIPAddresses/publicip20230520x01",
                "subnet_id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01/subnets/subnet20230520x01"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-0D-3A-08-27-8C",
            "name": "nic20230520x01",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Compute/virtualMachines/linuxvm20230520x01"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/networkSecurityGroups/secgrp20230520x01",
            "location": "southeastasia",
            "name": "secgrp20230520x01",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "secrule20230520x01",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/networkSecurityGroups/secgrp20230520x01/securityRules/secrule20230520x01",
            "name": "secrule20230520x01",
            "network_security_group_name": "secgrp20230520x01",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/publicIPAddresses/publicip20230520x01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.54.91",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "publicip20230520x01",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01/subnets/subnet20230520x01",
            "name": "subnet20230520x01",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "virtual_network_name": "vnet20230520x01"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-ssga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01/subnets/subnet20230520x01",
            "network_security_group_id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/networkSecurityGroups/secgrp20230520x01",
            "subnet_id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01/subnets/subnet20230520x01"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "636c6db7-939a-49d5-a75a-497d78946933",
            "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01",
            "location": "southeastasia",
            "name": "vnet20230520x01",
            "resource_group_name": "RG-20230520-learn-terraform-dev-project",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/virtualNetworks/vnet20230520x01/subnets/subnet20230520x01",
                "name": "subnet20230520x01",
                "security_group": "/subscriptions/4580e51b-f0fc-498d-8987-0974644e8147/resourceGroups/RG-20230520-learn-terraform-dev-project/providers/Microsoft.Network/networkSecurityGroups/secgrp20230520x01"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}